Fix duplicate scrollbar in card view

--- a/form-builder/src/app/pages/dashboard/card-view/card-view.component.less
+++ b/form-builder/src/app/pages/dashboard/card-view/card-view.component.less
@@ -10,6 +10,10 @@ p {
   margin: 0;
 }
 
+::ng-deep .view {
+  overflow: hidden; 
+}
+
 nz-card {
   min-height: 12rem;
 
